<resources>
    <!--Main menu strings-->
    <string name="mainMenu">Pick a game!</string>
    <string name="whichBin">Click here to play the which bin game!</string>
    <string name="trivia_game">Click here to play the climate change trivia game!</string>
    <string name="multiplayer_game">Click here to play the multiplayer game!</string>
    <string name="multipleChoice_game">Click here to play the multiple choice game!</string>
    <string name="main_game">Click here to play the main game!</string>

    <!--Which bin game strings-->
    <string name="app_name">Which bin?</string>
    <string name="generalWasteButton">General Waste</string>
    <string name="recycleButton">Recycle</string>
    <string name="organicWasteButton">Organic Waste</string>
    <string name="nextButton">Next</string>
    <string name="correctMessage">The Answer Is Correct!</string>
    <string name="incorrectMessage">The Answer Is Incorrect :(</string>
    <string name="questionHeader1">Which bin does this</string>
    <string name="questionHeader2">belong in?</string>

    <!--List of BinGame DND questions-->
    <string name="question_one">carrot</string>
    <string name="question_two">styrofoam</string>
    <string name="question_three">strawberry</string>
    <string name="question_four">newspaper</string>
    <string name="question_five">can</string>
    <string name="question_six">crisp packet</string>
    <string name="question_seven">bottle</string>
    <string name="question_eight">plate</string>
    <string name="question_nine">paper bag</string>
    <string name="question_ten">apple</string>

    <!--List of Conservation Status DND questions-->
    <string name="animal_question_one">Leatherback Turtle</string>
    <string name="animal_question_two">White Rhino</string>
    <string name="animal_question_three">Sumatran Orangutan</string>
    <string name="animal_question_four">White Tiger</string>
    <string name="animal_question_five">Amsterdam Albatross</string>
    <string name="animal_question_six">Beluga Whale</string>
    <string name="animal_question_seven">Asian Elephant</string>
    <string name="animal_question_eight">Giant Panda</string>
    <string name="animal_question_nine">Nubian Giraffe</string>
    <string name="animal_question_ten">Adriatic Sturgeon</string>

    <!--List of Impact DND questions-->
    <string name="impact_question_one">fossil fuels?</string>
    <string name="impact_question_two">adopting a vegan diet</string>
    <string name="impact_question_three">deforestation</string>
    <string name="impact_question_four">leaving light bulbs on</string>
    <string name="impact_question_five">riding a bicycle</string>
    <string name="impact_question_six">eating meat</string>
    <string name="impact_question_seven">solar power</string>
    <string name="impact_question_eight">adopting a vegetarian diet</string>
    <string name="impact_question_nine">riding a bus</string>
    <string name="impact_question_ten">riding a car</string>


    <!--List of MultiplayerGame questions-->
    <string name="m_question_one">Which of these causes the greenhouse effect?</string>
    <string name="m_question_two">Which of these is NOT an expected effect of climate change?</string>
    <string name="m_question_three">What is the Greenhouse Effect?</string>
    <string name="m_question_four">What can you do to help fight climate change?</string>
    <string name="m_question_five">Which of these countries emits the most carbon dioxide?</string>
    <string name="m_question_six">What percentage of the global greenhouse gas emissions does the transportation sector emit?</string>
    <string name="m_question_seven">Globally, which of the following economic sectors emits the largest percentage of greenhouse gas emissions?</string>
    <string name="m_question_eight">How much has the average global temperature risen by since 1880 (in Celsius)?</string>
    <string name="m_question_nine">Which planet\'s poisonous atmosphere has been described as the product of a "runaway greenhouse effect"?</string>
    <string name="m_question_ten">How many human deaths per year does the World Health Organization attribute to climate change?</string>

    <!--List of Science MCQ questions-->
    <string name="s_mcq_question_one">Which of the following gases does not trap heat?</string>
    <string name="s_mcq_question_two">If you removed the atmosphere\'s natural greenhouse effect, and everything else stayed the same, Earth\'s temperature would be:</string>
    <string name="s_mcq_question_three">How do scientists collect evidence about climate?</string>
    <string name="s_mcq_question_four">Which of the following is a greenhouse gas?</string>
    <string name="s_mcq_question_five">Why are forests important for mitigating climate change?</string>
    <string name="s_mcq_question_six">What is the carbon cycle?</string>
    <string name="s_mcq_question_seven">How much increase in global average surface temperature are humans responsible for?</string>
    <string name="s_mcq_question_eight">When grown under the CO2 levels expected by 2050, common produce could see reductions anywhere from 3&#8211;17 percent of what nutrient(s)?</string>
    <string name="s_mcq_question_nine">What is more deadly than any other weather-related hazard?</string>
    <string name="s_mcq_question_ten">Which of these countries has the highest per capita CO2 emissions?</string>

    <!--List of Nature MCQ questions-->
    <string name="n_mcq_question_one">How are warming ocean temperatures impacting whales, fish, and other marine mammals?</string>
    <string name="n_mcq_question_two">How can extreme events like hurricanes, drought, and wildfires impact energy infrastructure?</string>
    <string name="n_mcq_question_three">Cities and rural communities face some of the same climate issues; these include:</string>
    <string name="n_mcq_question_four">How is climate change altering precipitation in the U.S.?</string>
    <string name="n_mcq_question_five">How do climate factors (temperature, precipitation, and humidity) relate to vector-borne disease?</string>
    <string name="n_mcq_question_six">How many people in the world are vulnerable to the effects of climate change?</string>
    <string name="n_mcq_question_seven">What percentage of all global greenhouse gas emissions caused by humans are caused by deforestation</string>
    <string name="n_mcq_question_eight">As air pollution continues to be released into the atmosphere, what becomes more depleted, resulting in an increase of ultraviolet radiation on earth?</string>
    <string name="n_mcq_question_nine">How much has wildlife population dropped by in the last 40 years?</string>
    <string name="n_mcq_question_ten">As carbon dioxide emissions increase, the ocean\'s ability to absorb carbon dioxide declines, resulting in a more acidic ocean. What species is the most at risk in acidic water?</string>

    <!-- List of How to avoid MCQ questions-->
    <string name="a_mcq_question_one">Which of the following energy sources is environmentally friendly?</string>
    <string name="a_mcq_question_two">If the global temperature rises by over 1.5°C what percentage of species will be at risk of extinction? </string>
    <string name="a_mcq_question_three">What can you do to help fight climate change?</string>
    <string name="a_mcq_question_four">Which of the following modes of transport should you use to reduce impact on climate change?</string>
    <string name="a_mcq_question_five">What is the best solution to tackle climate change?</string>
    <string name="a_mcq_question_six">What kind of diet should you adopt to reduce impact on climate change?</string>
    <string name="a_mcq_question_seven">What should be done with household waste?</string>
    <string name="a_mcq_question_eight">What changes should you make in your household to reduce the impact on climate change?</string>
    <string name="a_mcq_question_nine">Of the following, the most impactful action you can take to reduce your carbon footprint is:</string>
    <string name="a_mcq_question_ten">What kind of light bulbs have the least impact on climate change?</string>

    <string name="title_activity_level_selection">LevelSelection</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
